Added files via upload
Created two separate threads Producer and Consumer. Producer fetches the portfolio page and writes it to the queue and consumer  reads it and deletes it from the queue.If the queue is empty then thread is made to sleep for some time.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,32 +24,32 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Login.jar
+dist.jar=${dist.dir}/SharePC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-codec-1.10.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\commons-codec-1.10.jar
-file.reference.commons-collections-3.2.1.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\commons-collections-3.2.1.jar
-file.reference.commons-io-2.4.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\commons-io-2.4.jar
-file.reference.commons-lang3-3.4.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\commons-lang3-3.4.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\commons-logging-1.2.jar
-file.reference.cssparser-0.9.18.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\cssparser-0.9.18.jar
-file.reference.htmlunit-2.19.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\htmlunit-2.19.jar
-file.reference.htmlunit-core-js-2.17.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\htmlunit-core-js-2.17.jar
-file.reference.httpclient-4.5.1.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\httpclient-4.5.1.jar
-file.reference.httpcore-4.4.3.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\httpcore-4.4.3.jar
-file.reference.httpmime-4.5.1.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\httpmime-4.5.1.jar
-file.reference.jetty-io-9.2.13.v20150730.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\jetty-io-9.2.13.v20150730.jar
-file.reference.jetty-util-9.2.13.v20150730.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\jetty-util-9.2.13.v20150730.jar
-file.reference.jsoup-1.8.3.jar=C:\\Users\\mamun\\Desktop\\New folder (2)\\jsoup-1.8.3.jar
-file.reference.nekohtml-1.9.22.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\nekohtml-1.9.22.jar
-file.reference.sac-1.3.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\sac-1.3.jar
-file.reference.serializer-2.7.2.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\serializer-2.7.2.jar
-file.reference.websocket-api-9.2.13.v20150730.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\websocket-api-9.2.13.v20150730.jar
-file.reference.websocket-client-9.2.13.v20150730.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\websocket-client-9.2.13.v20150730.jar
-file.reference.websocket-common-9.2.13.v20150730.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\websocket-common-9.2.13.v20150730.jar
-file.reference.xalan-2.7.2.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\xalan-2.7.2.jar
-file.reference.xercesImpl-2.11.0.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\xercesImpl-2.11.0.jar
-file.reference.xml-apis-1.4.01.jar=C:\\Users\\mamun\\Downloads\\htmlunit-2.19-bin (3)\\htmlunit-2.19\\lib\\xml-apis-1.4.01.jar
+file.reference.commons-codec-1.10.jar=C:\\Users\\mamun\\libraries\\commons-codec-1.10.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\mamun\\libraries\\commons-collections-3.2.1.jar
+file.reference.commons-io-2.4.jar=C:\\Users\\mamun\\libraries\\commons-io-2.4.jar
+file.reference.commons-lang3-3.4.jar=C:\\Users\\mamun\\libraries\\commons-lang3-3.4.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\mamun\\libraries\\commons-logging-1.2.jar
+file.reference.cssparser-0.9.18.jar=C:\\Users\\mamun\\libraries\\cssparser-0.9.18.jar
+file.reference.htmlunit-2.19.jar=C:\\Users\\mamun\\libraries\\htmlunit-2.19.jar
+file.reference.htmlunit-core-js-2.17.jar=C:\\Users\\mamun\\libraries\\htmlunit-core-js-2.17.jar
+file.reference.httpclient-4.5.1.jar=C:\\Users\\mamun\\libraries\\httpclient-4.5.1.jar
+file.reference.httpcore-4.4.3.jar=C:\\Users\\mamun\\libraries\\httpcore-4.4.3.jar
+file.reference.httpmime-4.5.1.jar=C:\\Users\\mamun\\libraries\\httpmime-4.5.1.jar
+file.reference.jetty-io-9.2.13.v20150730.jar=C:\\Users\\mamun\\libraries\\jetty-io-9.2.13.v20150730.jar
+file.reference.jetty-util-9.2.13.v20150730.jar=C:\\Users\\mamun\\libraries\\jetty-util-9.2.13.v20150730.jar
+file.reference.jsoup-1.8.3.jar=C:\\Users\\mamun\\libraries\\jsoup-1.8.3.jar
+file.reference.nekohtml-1.9.22.jar=C:\\Users\\mamun\\libraries\\nekohtml-1.9.22.jar
+file.reference.sac-1.3.jar=C:\\Users\\mamun\\libraries\\sac-1.3.jar
+file.reference.serializer-2.7.2.jar=C:\\Users\\mamun\\libraries\\serializer-2.7.2.jar
+file.reference.websocket-api-9.2.13.v20150730.jar=C:\\Users\\mamun\\libraries\\websocket-api-9.2.13.v20150730.jar
+file.reference.websocket-client-9.2.13.v20150730.jar=C:\\Users\\mamun\\libraries\\websocket-client-9.2.13.v20150730.jar
+file.reference.websocket-common-9.2.13.v20150730.jar=C:\\Users\\mamun\\libraries\\websocket-common-9.2.13.v20150730.jar
+file.reference.xalan-2.7.2.jar=C:\\Users\\mamun\\libraries\\xalan-2.7.2.jar
+file.reference.xercesImpl-2.11.0.jar=C:\\Users\\mamun\\libraries\\xercesImpl-2.11.0.jar
+file.reference.xml-apis-1.4.01.jar=C:\\Users\\mamun\\libraries\\xml-apis-1.4.01.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -66,6 +66,7 @@ javac.classpath=\
     ${file.reference.httpmime-4.5.1.jar}:\
     ${file.reference.jetty-io-9.2.13.v20150730.jar}:\
     ${file.reference.jetty-util-9.2.13.v20150730.jar}:\
+    ${file.reference.jsoup-1.8.3.jar}:\
     ${file.reference.nekohtml-1.9.22.jar}:\
     ${file.reference.sac-1.3.jar}:\
     ${file.reference.serializer-2.7.2.jar}:\
@@ -74,8 +75,7 @@ javac.classpath=\
     ${file.reference.websocket-common-9.2.13.v20150730.jar}:\
     ${file.reference.xalan-2.7.2.jar}:\
     ${file.reference.xercesImpl-2.11.0.jar}:\
-    ${file.reference.xml-apis-1.4.01.jar}:\
-    ${file.reference.jsoup-1.8.3.jar}
+    ${file.reference.xml-apis-1.4.01.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -100,7 +100,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=login.Login
+main.class=sharepc.SharePC
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
